# roxabi-live

./: .dev.vars.example  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .license-policy.json  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MONOREPO.md  Makefile  README.md  SECURITY.md  biome.json  bunfig.toml  commitlint.config.cjs  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  llms.txt  package-lock.json  package.json  playwright.config.ts  pyproject.toml  release-please-config.json  roadmap.md  tsconfig.json  turbo.jsonc  vision.md  vitest.config.ts  wrangler.toml
.claude/: dev-core.yml  settings.json  stack.yml  upstream-merge.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.lefthook/: run-quiet.sh
artifacts/: parent-node-style-poc.html
brand/: BRAND-BOOK.md  base.css  styles.css
docker/: init-app-user.sh
docs/: ARCHITECTURE.md  DEPLOY.md  ZK_ENCRYPTION.md  agent-workflow.md  cloudflared-setup.md  configuration.mdx  contributing.mdx  cutover-monorepo.md  getting-started.md  getting-started.mdx  hooks.mdx  index.mdx  meta.json  positioning.md  s10-staging-access.md  s7-access-cutover.md  s8-cron-observability.md  s9-cutover.md  zk-account-key-design.md
e2e/: account-delete.spec.ts  helpers.ts
frontend/: .assetsignore  app.css  app.js  auth-pages.js  auth-pages.test.js  auth-public.css  auth.css  auth.js  auth.test.js  conditions-utilisation.html  github-install.js  github-install.test.js  graph.css  graph.js  hover.js  hover.test.js  i18n.js  i18n.test.js  index.html  initial-sync.js  initial-sync.test.js  landing-user-menu.js  landing.css  landing.js  landing.test.js  layout.js  layout.test.js  legal.css  list.js  mentions-legales.html  module-graph.test.js  multi_select.js  multi_select.test.js  onboarding.js  onboarding.test.js  package-lock.json  package.json  pivot.js  politique-confidentialite.html  public-header.js  (+26 more)
infra/: live-domains.json  pages-app-staging.json  pages-app.json  pages-marketing-staging.json  pages-marketing.json  pages-migration.json  workers-builds.json
scripts/: bw-cloudflare-global-env.sh  bw-cloudflare-live-build-env.sh  checkEnvSync.ts  checkVercelEnv.ts  cutover-marketing-apex.sh  db.sh  deploy-production.sh  deploy-staging.sh  fixJsImports.ts  migrate-to-pages-model.mjs  predev.sh  prepare.sh  recordDemo.ts  renameFiles.ts  run-live-build-token-setup.sh  setup-cloudflare-deploy-pages-sync.mjs  setup-cloudflare-deploy.mjs  setup-live-build-token.mjs  setup-live-domains.mjs  setup-pages-build.mjs  setup-pages-projects.mjs  setup-staging-access.sh  setup-workers-builds.mjs  trigger-pages-deployments.mjs  validateTranslations.ts  verify-cloudflare-pages.mjs  verify-cloudflare-workers.mjs  verify-cloudflare.mjs
tests/: conftest.py  test_api_graph_dev_state.py  test_api_issues.py  test_config.py  test_corpus_mutations.py  test_gzip.py  test_health.py  test_nonblocking_startup.py  test_reconciler.py  test_reconciler_lifecycle.py  test_reconciler_pr_branch.py  test_schema_migration.py  test_sync_branches_prs.py  test_webhook_body_cap.py  test_webhook_handlers.py  test_webhook_hmac.py  test_webhook_pull_request.py  test_webhook_ref.py  test_webhook_router.py
tools/: backfill_labels.py  checkEnvSync.test.ts  check_duplicate_test_basenames.sh  docsFrontmatterCheck.ts  docsLinkAudit.test.ts  docsLinkAudit.ts  file_exemptions.txt  folder_exemptions.txt  licenseChecker.test.ts  license_check.py  mdxChecker.test.ts  mdxChecker.ts  qg.conf  vitest.config.ts
worker/: package-lock.json  package.json  (+1 more)
(+1583 files in other folders)
