[project]
license = { text = "AGPL-3.0-or-later" }
name = "roxabi-live"
version = "0.1.1"
description = "Roxabi operations cockpit — live view of issues corpus, agents, CI/CD"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.21.0",
    "python-dotenv>=1.2.2",
    "jsonschema>=4.0",
    "jinja2>=3.0",
]

[project.scripts]
roxabi-live = "roxabi_live.__main__:main"
roxabi-corpus = "roxabi_live.corpus.cli:main"
dep-graph = "roxabi_live.dep_graph.v1.cli:main"
dep-graph-v5 = "roxabi_live.dep_graph.v5.build:main"
dep-graph-v6 = "roxabi_live.dep_graph.v6.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roxabi_live"]

[tool.uv]
# No override-dependencies needed for this lean stack.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--import-mode=importlib -m 'not integration'"
markers = [
    "integration: tests requiring local fixture files (not run in CI by default)",
]

[tool.coverage.run]
branch = true
source = ["roxabi_live"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
# Frozen v1/v5 dep_graph code (legacy CLI + static HTML build) — excluded from
# strict type checking. Active code (v6, corpus, app) remains strict.
exclude = [
    "src/roxabi_live/dep_graph/v1/**",
    "src/roxabi_live/dep_graph/v5/**",
    "tests/dep_graph/v1/**",
    "tests/dep_graph/v5/**",
]
venvPath = "."
venv = ".venv"
# reportPrivateUsage: convention-only in Python; creates false positives on
# white-box tests and tightly-coupled internal modules. Enforced by code review.
reportPrivateUsage = "none"
# reportUnusedFunction: decorator-registered callables (FastAPI route handlers)
# are not statically reachable; suppressed to avoid noise.
reportUnusedFunction = "none"

[tool.ruff]
src = ["src", "tests"]
exclude = [".claude/worktrees", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "C901", "PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
# Legacy v1/v5 migrated code — frozen; lint relaxations instead of refactor.
"src/roxabi_live/dep_graph/v1/**" = ["E501", "C901", "PLR0913", "PLR0915"]
"src/roxabi_live/dep_graph/v5/**" = ["E501", "C901", "PLR0913", "PLR0915"]
"tests/dep_graph/v1/**" = ["E501"]
"tests/dep_graph/v5/**" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 50
max-args = 5

[tool.ruff.format]

[dependency-groups]
dev = [
    "import-linter>=2.0,<3",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
    "httpx>=0.28",
    "pip-licenses>=5.5.5",
    "radon>=6.0.1",
]
