[project]
license = { text = "AGPL-3.0-or-later" }
name = "roxabi-live"
version = "0.22.1"
description = "Roxabi Live — repo tooling (Worker + frontend are the application)"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tools"]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.5",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]

[tool.ruff]
src = ["tools"]
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tools/license_check.py" = ["E501"]